/* (c) https://github.com/MontiCore/monticore */
import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar

plugins {
  id 'java-library'
  id 'maven-publish'
  id "de.monticore.generator" version "$mc_version" // MontiCore Plugin
  id "com.gradleup.shadow" version "$shadow_plugin_version"
  id 'jacoco'
  id "io.github.themrmilchmann.ecj" version "0.2.0"
}

ecj {
  compilerVersion = "3.43.0"
}

def grammarDir = "src/main/grammars"

group = "de.monticore.lang"
description = "Object Diagram DSL"

layout.buildDirectory = file("$projectDir/target")

// configure non-standard source sets
sourceSets {
  grammarsForVariant {
    java.srcDirs = []
    resources {
      srcDirs([grammarDir])
      include "**/*.mc4"
      include "**/*.mlc"
    }
  }
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
  // Deprecated feature, published for compatibility reasons
  registerFeature('grammars') {
    usingSourceSet(sourceSets.grammarsForVariant)
  }
}

dependencies {
  grammar("de.monticore:monticore-grammar:$mc_version")
  implementation "org.antlr:antlr4-runtime:4.12.0"
  implementation 'net.sourceforge.plantuml:plantuml:1.2023.12'
  implementation "de.se_rwth.commons:se-commons-logging:$mc_version"
  implementation "de.monticore:monticore-runtime:$mc_version"
  implementation "de.monticore.lang:cd4analysis:$mc_version"
  implementation "de.monticore:monticore-grammar:$mc_version"
  implementation "commons-cli:commons-cli:$commons_cli_version"
  implementation "org.apache.commons:commons-lang3:$commons_lang3_version"
  implementation "com.google.guava:guava:$guava_version"
  testImplementation testFixtures("de.monticore:monticore-grammar:$mc_version")
  testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_version"
  testImplementation "org.junit.jupiter:junit-jupiter-engine:$junit_version"
  testImplementation "org.junit.jupiter:junit-jupiter-params:$junit_version"
  testRuntimeOnly "org.junit.platform:junit-platform-launcher:$junit_version"
}

repositories {
  if (("true").equals(getProperty('useLocalRepo'))) {
    mavenLocal()
  }
  maven {
    credentials.username = mavenUser
    credentials.password = mavenPassword
    url = repo
  }
}

test {
  useJUnitPlatform()
  testLogging {
    exceptionFormat = 'full'
    showStackTraces = true
    showStandardStreams = true
  }

  // listen to standard out and standard error of the test JVM(s)
  addTestOutputListener(new TestOutputListener() {
    @Override
    void onOutput(TestDescriptor testDescriptor, TestOutputEvent outputEvent) {
      logger.lifecycle("Test: " + testDescriptor.getName() + " produced standard out/err: " + outputEvent.getMessage())
    }
  })
  finalizedBy jacocoTestReport
}

shadowJar {
  duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

// build sources jar in addition
tasks.register('sourcesJar', Jar) {
  from(sourceSets.main.allJava)
  archiveClassifier = "sources"
}

sourcesJar.dependsOn project.collect { it.tasks.withType(MCGenTask) }

tasks.withType(ShadowJar).configureEach {
  duplicatesStrategy = DuplicatesStrategy.INCLUDE
}

// build grammar jar as well
tasks.register('grammarJar', Jar) {
  from("$projectDir/src/main/grammars/") { include "**/*.mc4" }
  archiveClassifier = "grammars"
}
jar.dependsOn(grammarJar)

tasks.register('buildOD4ReportTool', ShadowJar) {
  minimize()
  archiveFileName = 'MCOD4Report.jar'
  archiveClassifier = "od4report-mc-tool"
  manifest {
    attributes('Main-Class': 'de.monticore.od4report.OD4ReportTool')
  }
  from sourceSets.main.output
  configurations = [project.configurations.runtimeClasspath]
}
jar.dependsOn(buildOD4ReportTool)

tasks.register('buildOD4DevelopmentTool', ShadowJar) {
  minimize()
  archiveFileName = 'MCOD4Development.jar'
  archiveClassifier = "od4development-mc-tool"
  manifest {
    attributes('Main-Class': 'de.monticore.od4development.OD4DevelopmentTool')
  }
  from sourceSets.main.output
  configurations = [project.configurations.runtimeClasspath]
}
jar.dependsOn(buildOD4DevelopmentTool)

tasks.register('testReport', TestReport) {
  destinationDirectory = file("${layout.buildDirectory}/reports/allTests")
  // Include the results from the 'test' task
  getTestResults().from(tasks.withType(Test))
}

// configure deployment
publishing {
  // configure what artifacts to publish
  publications {
    mavenJava(MavenPublication) {
      artifactId = "$project.name"
      from components.java
      artifact sourcesJar
      artifact buildOD4DevelopmentTool
      artifact buildOD4ReportTool
    }
  }
  repositories.maven {
    credentials.username = mavenUser
    credentials.password = mavenPassword
    def releasesRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-releases/"
    def snapshotsRepoUrl = "https://nexus.se.rwth-aachen.de/content/repositories/monticore-snapshots/"
    url = version.endsWith("SNAPSHOT") ? snapshotsRepoUrl : releasesRepoUrl
  }
}

tasks.withType(JavaCompile).configureEach {
  options.fork = true
  options.encoding = "UTF-8"
  options.deprecation = false
  options.warnings = false
  options.headerOutputDirectory.convention(null)
}

/**
 * Integration with MLC language and tool
 */
tasks.register('showArtifacts') { group = "MLC" }
tasks.register('checkArtifacts') {group = "MLC" }
configurations { MLC }
dependencies {
  MLC("de.monticore.lang:mlc-gradle:$version")
}

def modelPath = [];
configurations.compileClasspath.resolve().each { modelPath.addAll(["-mp", it.toString()]) }
configurations.grammarSymbolDependencies.resolve().each { modelPath.addAll(["-mp", it.toString()]) }
modelPath.addAll(["-mp", "$projectDir/target/symbols"])

// two tasks per MLC file
// each task needs to depend on all internally promoted MLCs
fileTree("src").matching { include '**/*.mlc' }.each {
  def f = it
  def mlcName = it.getName().substring(0, it.getName().lastIndexOf('.'))

  tasks.register("showArtifacts${mlcName}", JavaExec) {
    classpath = configurations.MLC
    group = 'MLC'
    mainClass = 'de.monticore.mlc.MLCTool'
    args = [ "-input", f, "-projectDir", projectDir, "-s", "-reports", "${layout.buildDirectory}/reports", "-a", "-noFQ"]
    args += modelPath
    dependsOn("generateMCGrammars")
  }
  showArtifacts.dependsOn("showArtifacts${mlcName}")

  tasks.register("checkArtifacts${mlcName}", JavaExec) {
    classpath = configurations.MLC
    group = 'MLC'
    mainClass = 'de.monticore.mlc.MLCTool'
    args = ["-input", f, "-projectDir", projectDir, "-s", "-check", "-reports", "${layout.buildDirectory}/reports"]
    args += modelPath
    dependsOn("generateMCGrammars")
  }
  checkArtifacts.dependsOn("checkArtifacts${mlcName}")
}

// MLC Check dependencies
// always depend on the checks of the mlc models which are allowed by an mlc
checkArtifactsODLink.dependsOn(checkArtifactsODBasis)

checkArtifactsODAttribute.dependsOn(checkArtifactsODBasis)

checkArtifactsOD4Development.dependsOn(checkArtifactsODLink)
checkArtifactsOD4Development.dependsOn(checkArtifactsODAttribute)

checkArtifactsOD4Report.dependsOn(checkArtifactsDateLiterals)
checkArtifactsOD4Report.dependsOn(checkArtifactsOD4Development)

// MLC Show dependencies
// always depend on the shows of the mlc models which are allowed by an mlc
showArtifactsODLink.dependsOn(showArtifactsODBasis)

showArtifactsODAttribute.dependsOn(showArtifactsODBasis)

showArtifactsOD4Development.dependsOn(showArtifactsODLink)
showArtifactsOD4Development.dependsOn(showArtifactsODAttribute)

showArtifactsOD4Report.dependsOn(showArtifactsDateLiterals)
showArtifactsOD4Report.dependsOn(showArtifactsOD4Development)
